deployments/keycloak/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  labels:
    app: postgres
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
